# SIMNRApp

./: CMakeLists.txt  README.md  compile.bat
include/: simnra.h  utility.h
src/: simnra.cpp  utility.cpp
